# cta-trend-service

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh
beta/: AGENTS.md
config/: AGENTS.md  app.yaml.template  auto_params.json  dynamic_params.json
docs/: API.md  BETA_QMJ.csv  BETA_SMB.csv  CTA_System_Whitepaper.md  FACTOR_R_H20.csv  VALUE_T.csv  VALUE_z.csv  WP10_2020-03-06_calc.csv  WP10_2020-03-06_signals.csv  WP10_2020-03-06_weights.csv  WP10_2024-11-15_calc.csv  WP10_2024-11-15_exec.csv  WP10_2024-11-15_prev_weights.csv  WP10_2024-11-15_signals.csv  WP10_2024-11-15_tilt.csv  WP10_2024-11-15_weights.csv  WP10_prev_weights.csv  arc_diag.dot  greedy_convex_hull_volume.py  schedule.txt  技术设计文档.md  附录1-BucketTradableAssets推荐工具设计方案.md
migrations/: AGENTS.md  env.py
migrations/versions/: 2c6b9b9a87d4_add_feature_weekly_sample.py  4c9f28f5ee17_add_bucket_table.py  655d81b0ca1e_create_output_tables.py  7c1f5b1a9b8a_add_signal_bucket_id.py  9784c5d24020_make_bucket_proxy_nullable.py  b95bfe62110c_add_bucket_proxy_fields.py
proxy/: AGENTS.md
score/: AGENTS.md
scripts/: AGENTS.md  read_write_job_run.py
src/: main.py
src/api/: AGENTS.md  backtests.py  deps.py  errors.py  health.py  jobs.py  runs.py  schemas.py  signals.py  weights.py
src/backtest/: AGENTS.md  README.md  engine.py  runner.py
src/bucket_reco/: AGENTS.md  runner.py
src/core/: AGENTS.md  config.py  db.py  logging.py  schema.py
src/features/: AGENTS.md  __init__.py  computer.py  registry.py  sampler.py
src/repo/: AGENTS.md  base.py  inputs.py  outputs.py
src/services/: AGENTS.md  auto_param_service.py  backtest_service.py  contracts.py  dynamic_param_service.py  (+5 more)
tests/: AGENTS.md  conftest.py  test_health.py  test_job_runner.py  test_repos_inputs.py  test_repos_outputs.py  test_run_audit_service.py
trend/: AGENTS.md
(+85 files in other folders)
