[project]
name = "cta-trend-service"
version = "0.1.0"
description = "CTA trend-following allocation microservice"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "psycopg[binary]>=3.1",
  "psycopg2-binary>=2.9",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "alembic>=1.13",
  "testcontainers>=4.3",
  "docker>=7.0",
  "types-PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "uvicorn>=0.29",
  "numba>=0.59",
  "vectorbt>=0.25",
]

[project.scripts]
cta-trend-service = "src.main:run"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["docs/a_factor_compute_module", "docs/reference"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
mypy_path = ["src"]
files = ["src"]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
warn_unreachable = true


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: live network or external dependency tests",
]
